[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/enemies/TankBody-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/TankHead.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/TankBoss.gd" type="Script" id=3]
[ext_resource path="res://assets/enemies/tankSpikes.png" type="Texture" id=4]
[ext_resource path="res://entities/enemies/EnemyBase.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=8]
resource_name = "RamState"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RamState/Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( -2, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 44, 26 )

[node name="TankBoss" instance=ExtResource( 5 )]
script = ExtResource( 3 )
hp = 150
hitKnockBack = 0
lookAtPlayer = false

[node name="RamState" type="Node2D" parent="." index="4"]

[node name="Sprite" type="Sprite" parent="RamState" index="0"]
position = Vector2( 52, 0 )
texture = ExtResource( 4 )
offset = Vector2( -10, 0 )

[node name="RamDamage" type="Area2D" parent="RamState" index="1"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RamState/RamDamage" index="0"]
position = Vector2( 49, 0 )
shape = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]
frames = SubResource( 7 )
playing = true

[node name="StatesAnimationplayer" type="AnimationPlayer" parent="." index="6"]
anims/RamState = SubResource( 8 )

[node name="Head" type="Node2D" parent="." index="7"]
position = Vector2( 20, 0 )

[node name="Sprite" type="Sprite" parent="Head" index="0"]
position = Vector2( -20, 0 )
texture = ExtResource( 2 )

[node name="TankShootFrom" type="Position2D" parent="Head" index="1"]
position = Vector2( 28, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="8"]
visible = false
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="SwitchState" type="Timer" parent="." index="9"]
wait_time = 5.0
autostart = true

[node name="StationaryShots" type="Node2D" parent="." index="10"]

[node name="FollowStateShootTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="StationaryStateShootTimer" type="Timer" parent="." index="12"]
one_shot = true

[connection signal="body_entered" from="RamState/RamDamage" to="." method="_on_RamDamage_body_entered"]
[connection signal="timeout" from="SwitchState" to="." method="_on_SwitchState_timeout"]
